add project files

--- a/arui/WebContent/i18n/i18n.properties
+++ b/arui/WebContent/i18n/i18n.properties
@@ -6,6 +6,8 @@ appTitle=SAP on call allowance request
 #YDES: Application description
 appDescription=SAP on call allowance request
 
+atype=Allowance type
+
 #~~~ Common ~~~~~~~~~~~~~~~
 browse=Browse...
 filename=File name
