add review page - draft

--- a/arui/WebContent/i18n/i18n.properties
+++ b/arui/WebContent/i18n/i18n.properties
@@ -8,6 +8,8 @@ appDescription=SAP on call allowance request
 
 atype=Allowance type
 
+accept=Accept
+aaa=AAA
 #~~~ Common ~~~~~~~~~~~~~~~
 browse=Browse...
 filename=File name
