add proxy by feature

--- a/arui/WebContent/i18n/i18n.properties
+++ b/arui/WebContent/i18n/i18n.properties
@@ -35,6 +35,8 @@ hours=hours
 suggestionEnabled=Try enter some beginning numbers.
 role=Role
 
+becomeSelf=Become self
+
 userTitle=User administration
 userName=Login name
 userFullName=User full name
