add translation to oncallAllowance page

--- a/arui/WebContent/i18n/i18n.properties
+++ b/arui/WebContent/i18n/i18n.properties
@@ -69,3 +69,23 @@ notAvailableViewTitle=No view
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+
+
+#~~~ oncallAllowanceTitle ~~~~~~~~~~~~~~~~~~~~~
+oncallAllowance=Time Recording Claim
+oncallAllowanceTitle=Shift / On-Call Allowance Request
+iNumber=Employee I-Number
+empName=Employee Name
+customerSite=Customer Site
+oncallPeriod=Request Period
+oncallDate=Date
+startTime=Start Time
+endTime=End Time
+oncallHours=Hours
+allowance=Allowance
+Status=Request Status
+remark=Remarks(if any)
+rejectReason=Reject Reason
+importFromExcel=Import Excel
+sendToManager=Send Request
+edit = Edit
