add translation for home,approve

--- a/arui/WebContent/i18n/i18n.properties
+++ b/arui/WebContent/i18n/i18n.properties
@@ -1,12 +1,11 @@
 # This is the resource bundle for Seat Finding
 
 #XTIT: Application name
-appTitle=SAP on call allowance request
+appTitle=SAP On Call Allowance Request
 
 #YDES: Application description
-appDescription=SAP on call allowance request
+appDescription=SAP On Call Allowance Request
 
-atype=Allowance type
 
 accept=Accept
 aaa=AAA
@@ -37,7 +36,6 @@ role=Role
 
 becomeSelf=Become self
 
-userTitle=User administration
 userName=Login name
 userFullName=User full name
 password=Password
@@ -72,7 +70,6 @@ errorText=Sorry, a technical error occurred! Please try again later.
 
 
 #~~~ oncallAllowanceTitle ~~~~~~~~~~~~~~~~~~~~~
-oncallAllowance=Time Recording Claim
 oncallAllowanceTitle=Shift / On-Call Allowance Request
 iNumber=Employee I-Number
 empName=Employee Name
@@ -88,4 +85,48 @@ remark=Remarks(if any)
 rejectReason=Reject Reason
 importFromExcel=Import Excel
 sendToManager=Send Request
-edit = Edit
+edit=Edit
+comeSoon=Coming Soon
+
+
+#~~~ Home View ~~~~~~~~~~~~~~~~~
+managerApprovement=View All Pending Requests
+oncallAllowance=Time Recording Claim
+atypeM=Allowance Type Management
+userTitle=User Administration
+
+oncallAllowancetip=This section is for creating and submitting time record claims
+managertip=This section is for handling pending requests
+
+
+#~~~ Allowance Type ~~~~~~~~~~~~~~
+allowanceTypeTitle=Allowance Type Management
+atype=Allowance Type
+timeType=Time Type
+oncallSubsidyUnit=Subsidy Unit
+oncallCustomerSiteYes=On Site (￥)
+oncallCustomerSiteNo=Off Site (￥)
+otPaymentMultiplier=Payment Multiplier (*)
+otPaymentBase=Payment Base
+memo=Descriptions
+
+#~~~ reviewMaster ~~~~~~~~~~~~~~~~
+reviewMaster=View All Pending Requests
+reviewDetail=Pending Request Details
+exportToExcel=Export To Excel
+acceptAll=Accept All
+rejectAll=Reject All
+acceptAllQuestion=Are you sure to accept all the requests?
+rejectAllQuestion=Please leave a reason to reject
+rejectPlaceholder=Reason to reject....
+cancel=Cancel
+accept=Accept
+acceptQuestion=Are you sure to accept this request?
+reject=Reject
+rejectQuestion=Are you sure to reject this request?
+
+
+
+
+
+
