add translation for no from date, to date error

--- a/arui/WebContent/i18n/i18n.properties
+++ b/arui/WebContent/i18n/i18n.properties
@@ -67,6 +67,10 @@ notAvailableViewTitle=No view
 
 #YMSG: Error dialog description
 errorText=Sorry, a technical error occurred! Please try again later.
+noFromDateT=Missing FromDate Error
+noFromDateQ=Please input the from date
+noToDateT=Missing ToDate Error
+noToDateQ=Please input the to date
 
 
 #~~~ oncallAllowanceTitle ~~~~~~~~~~~~~~~~~~~~~
