fix RMB character error

--- a/arui/WebContent/i18n/i18n.properties
+++ b/arui/WebContent/i18n/i18n.properties
@@ -108,8 +108,8 @@ allowanceTypeTitle=Allowance Type Management
 atype=Allowance Type
 timeType=Time Type
 oncallSubsidyUnit=Subsidy Unit
-oncallCustomerSiteYes=On Site (￥)
-oncallCustomerSiteNo=Off Site (￥)
+oncallCustomerSiteYes=On Site (RMB)
+oncallCustomerSiteNo=Off Site (RMB)
 otPaymentMultiplier=Payment Multiplier (*)
 otPaymentBase=Payment Base
 memo=Descriptions
