user table press lacks of items

--- a/arui/WebContent/i18n/i18n.properties
+++ b/arui/WebContent/i18n/i18n.properties
@@ -129,7 +129,9 @@ acceptQuestion=Are you sure to accept this request?
 reject=Reject
 rejectQuestion=Are you sure to reject this request?
 
-
+manager=Manager
+costCenter=Cost center
+chargedCostCenter=Charged cost center(s)
 
 
 
