add translation term

--- a/arui/WebContent/i18n/i18n.properties
+++ b/arui/WebContent/i18n/i18n.properties
@@ -35,6 +35,7 @@ suggestionEnabled=Try enter some beginning numbers.
 role=Role
 
 becomeSelf=Become self
+proxyAs=Proxy as:
 
 userName=Login name
 userFullName=User full name
@@ -71,7 +72,12 @@ noFromDateT=Missing FromDate Error
 noFromDateQ=Please input the from date
 noToDateT=Missing ToDate Error
 noToDateQ=Please input the to date
-
+clearDataQ=All data in the table will be removed, continue?
+clearDataT=Remove Data Prompt
+endTimeMustGreatThenStartTimeErr=The date of "To" should be later then "From"
+deleteOncallAllowanceS=Delete shift / On-Call allowance request item success
+updateOncallAllowanceS=Update shift / On-Call allowance request item success
+sendToManagerS=Send request success
 
 #~~~ oncallAllowanceTitle ~~~~~~~~~~~~~~~~~~~~~
 oncallAllowanceTitle=Shift / On-Call Allowance Request
@@ -133,6 +139,12 @@ manager=Manager
 costCenter=Cost center
 chargedCostCenter=Charged cost center(s)
 
+new=New
+sentToManager=
+submitted=Submitted
+managerApproved=ManagerApproved
+taApproved=TAApproved
+paid=Paid
 
 
 
